changed root scrollbar, fixed logo not displaying on adminheader -header components ................

--- a/Eshop-tutorial-master/frontend/src/App.css
+++ b/Eshop-tutorial-master/frontend/src/App.css
@@ -2,23 +2,49 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --primary: #e7e9eb;
+  --secondary: rgb(125, 80, 237);
+  --hoverSecondary: rgb(100, 33, 234);
+}
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 17px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--primary);
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--secondary);
+  border-radius: 15px;
+  border: 3px solid var(--primary);
+}
+*::-webkit-scrollbar-thumb:hover {
+  background-color: var(--hoverSecondary);
+  border-radius: 15px;
+  border: 3px solid var(--primary);
+}
 /* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
+* {
   scroll-behavior: smooth;
 }
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    background: #F6F6F5;
-    scroll-behavior: smooth;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background: #f6f6f5;
+  scroll-behavior: smooth;
 }
-input,select{
+input,
+select {
   outline: none;
 }
-.batch_heart{
+.batch_heart {
   background: tomato;
   width: 15px;
   height: 15px;
@@ -39,6 +65,6 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
+input[type='number'] {
   -moz-appearance: textfield;
 }
